attempt to fix nav issue on mobile

--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -41,3 +41,8 @@ html {
 .edit:hover {
     cursor: pointer;
 }
+@media screen and (max-width: 450px) {
+    .App {
+        padding-top: 25px;
+    }
+}
